k8s/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devopspractice-web
  namespace: devopspractice

spec:
  selector:
    matchLabels:
      app: devopspractice-web

  template:
    metadata:
      labels:
        app: devopspractice-web

    spec:
      containers:
      - name: devopspractice-web

        image: abdulghaffar2455/devopspractice:799f731310d6249a6918386d10a9b85122a33d3d

        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        # env:
        # # - name: ConnectionStrings__DefaultConnection
        # #   value: "Server=sqlserver;Database=DevOpsPractice;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True"
        # env:
        #   - name: ConnectionStrings__DefaultConnection
        #     valueFrom:
        #       secretKeyRef:
        #         name: sql-secret
        #         key: ConnectionStrings__DefaultConnection
        startupProbe:
          httpGet:
            path: /health
            port: 8080

          failureThreshold: 60
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /health
            port: 8080

          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 8080

          initialDelaySeconds: 20
          periodSeconds: 20
