k8s/base/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devopspractice-web
  namespace: devopspractice

spec:
  selector:
    app: devopspractice-web

  ports:
    - port: 80
      targetPort: 8080

  type: NodePort
