k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopspractice-ingress
  namespace: devopspractice
spec:
  ingressClassName: nginx
  rules:
  - host: devopspractice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devopspractice-web
            port:
              number: 80
